<resources>
    <string name="app_name">MyMLBProject</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="team_abbr">Team</string>
    <string name="num_players">Number of Players</string>
    <string name="total_salary">Total Salary</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="player_name">Player Name</string>
    <string name="player_position">Position</string>
    <string name="player_salary">Salary</string>
    <string name="player_injury">Injury</string>
    <string name="sort_players">Sort by Players</string>
    <string name="sort_position">Sort by Position</string>
    <string name="sort_salary">Sort by Salary</string>
    <string name="sort_name">Sort by Name</string>
    <string name="sort_injury">Sort by Injury</string>
</resources>
