<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_player"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    card_view:cardElevation="2dp"
    card_view:cardCornerRadius="4dp"
    card_view:cardUseCompatPadding="true">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/player_name"
                android:textSize="24sp"
                android:padding="8dp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/player_name_tv"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="8dp"
                android:textSize="24sp"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/player_position"
                android:padding="8dp"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/player_position_tv"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/player_salary"
                android:padding="8dp"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/player_salary_tv"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="8dp"
                android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/injury_layout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/player_injury"
                android:padding="8dp"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/player_injury_tv"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="8dp"
                android:textSize="18sp"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>