<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/team_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    card_view:cardElevation="2dp"
    card_view:cardCornerRadius="4dp"
    card_view:cardUseCompatPadding="true">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/team_abbr"
                android:textSize="24sp"
                android:padding="8dp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/team_abbreviation_tv"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="8dp"
                android:textSize="24sp"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/num_players"
                android:padding="8dp"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/num_players_tv"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/total_salary"
                android:padding="8dp"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/total_salary_tv"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="8dp"
                android:textSize="18sp"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>